--- a/.htaccess
+++ b/.htaccess
@@ -27,9 +27,16 @@
 RewriteEngine On
 RewriteBase /
 RewriteRule ^index\.php$ - [L]
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /index.php [L]
+
+# add a trailing slash to /wp-admin
+RewriteRule ^(app/)?wp-admin$ $1wp-admin/ [R=301,L]
+
+RewriteCond %{REQUEST_FILENAME} -f [OR]
+RewriteCond %{REQUEST_FILENAME} -d
+RewriteRule ^ - [L]
+RewriteRule ^(wp-(content|admin|includes).*) app/$1 [L]
+RewriteRule ^(.*\.php)$ app/$1 [L]
+RewriteRule . index.php [L]
 </IfModule>
 
 # END WordPress
