--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ wp-content/upgrade
 wp-content/uploads/*
 !wp-content/uploads/.htaccess
 !wp-content/mu-plugins/disallow-indexing.php
+wp-content/cache
+wp-content/wp-rocket-config
 
 # Vendor (e.g. Composer)
 vendor/*
