--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # WordPress
-app/
-wp-config.php
+public/app/
+public/wp-config.php
 
 # WP-CLI
 db-sync
@@ -12,16 +12,16 @@ sql-dump-*.sql
 !.env.example
 
 # Application
-wp-content/languages/*
-wp-content/plugins/*
-!wp-content/plugins/.gitkeep
-wp-content/mu-plugins/*
-!wp-content/mu-plugins/.gitkeep
-wp-content/upgrade
-!wp-content/upgrade/.gitkeep
-wp-content/uploads/*
-!wp-content/uploads/.htaccess
-!wp-content/mu-plugins/disallow-indexing.php
+public/wp-content/languages/*
+public/wp-content/plugins/*
+!public/wp-content/plugins/.gitkeep
+public/wp-content/mu-plugins/*
+!public/wp-content/mu-plugins/.gitkeep
+public/wp-content/upgrade
+!public/wp-content/upgrade/.gitkeep
+public/wp-content/uploads/*
+!public/wp-content/uploads/.htaccess
+!public/wp-content/mu-plugins/disallow-indexing.php
 
 # Vendor (e.g. Composer)
 vendor/*
@@ -29,6 +29,7 @@ vendor/*
 
 # Node Package Manager
 node_modules
+public/node_modules
 
 # Vagrant
 bin
