--- a/composer.json
+++ b/composer.json
@@ -25,12 +25,15 @@
     "wpackagist-plugin/query-monitor": "*",
     "wpackagist-plugin/wordpress-importer": "*"
   },
+  "suggest": {
+    "wp-cli/wp-cli-bundle": "WP-CLI is the command-line interface for WordPress."
+  },
   "extra": {
     "wordpress-install-dir": "app",
     "installer-paths" : {
-      "wp-content/themes/{$name}/": ["type:wordpress-theme"],
-      "wp-content/plugins/{$name}/": ["type:wordpress-plugin"],
-      "wp-content/mu-plugins/{$name}/": ["type:wordpress-muplugin"]
+      "public/wp-content/themes/{$name}/": ["type:wordpress-theme"],
+      "public/wp-content/plugins/{$name}/": ["type:wordpress-plugin"],
+      "public/wp-content/mu-plugins/{$name}/": ["type:wordpress-muplugin"]
     }
   }
 }
