--- a/.editorconfig
+++ b/.editorconfig
@@ -7,61 +7,41 @@ charset = utf-8
 end_of_line = LF
 insert_final_newline = false
 trim_trailing_whitespace = true
-
-[*.{php}]
-indent_style = space
-indent_size = 4
-
-[*.{html,twig}]
 indent_style = space
 indent_size = 4
 
 [*.{js,jsx,ts,tsx}]
-indent_style = space
 indent_size = 2
 
-[*.{ini,conf,git}]
-indent_style = tab
-indent_size = 4
-
 [*.{json,lock}]
-indent_style = space
 indent_size = 2
 
 [*.{css,scss}]
-indent_style = space
 indent_size = 2
 
 [*.sql]
 indent_style = tab
-indent_size = 4
+tab_width = 4
 
 [*.sh]
 indent_style = tab
-indent_size = 4
-
-[*.{cmd,bat}]
-end_of_line = crlf
-indent_style = tab
-indent_size = 4
 
 [*.txt]
 end_of_line = crlf
 indent_style = tab
-indent_size = 4
+tab_width = 4
 
 [*.md]
 indent_style = tab
-indent_size = 4
+tab_width = 4
 trim_trailing_whitespace = false
 
 [*.{yml,yaml}]
-indent_style = space
 indent_size = 2
 
 [*.xml]
 indent_style = tab
-indent_size = 4
+tab_width = 4
 
 [{Makefile.*,makefile,Makefile,GNUmakefile,*.mk}]
 indent_style = tab
@@ -69,6 +49,3 @@ tab_width = 4
 
 [COMMIT_EDITMSG]
 max_line_length = 0
-
-[Dockerfile]
-indent_size = 4
